--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -2,7 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -43,4 +53,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
